# olivec-sys

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
examples/: flag_of_japan.rs
src/: olivec.c
